--- a/SolickManagerV3_4/Pages/ListApplicationPage.xaml
+++ b/SolickManagerV3_4/Pages/ListApplicationPage.xaml
@@ -739,8 +739,9 @@
                                         Foreground="Black"
                                         FontFamily="Inter/#Inter-V.ttf"/>
                                 <ListView Style="{DynamicResource RoundWhiteListBox}" 
-                                         ItemsSource="{Binding SelectedApplication.ListService}"
+                                         ItemsSource="{Binding SelectedApplicationServices}"
                                          SelectedItem="{Binding SelectedServiceInSelectedApplication}"
+                                          DisplayMemberPath="IdserviceNavigation"
                                          FontSize="12"
                                          Foreground="Black"
                                          FontFamily="Inter/#Inter-V.ttf"
