--- a/SolickManagerV3_4/Windows/AddCrossApplicationServiceWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossApplicationServiceWindow.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="AddCrossApplicationServiceWindow" Height="350" Width="400">
+        Title="AddCrossApplicationServiceWindow" Height="450" Width="400">
     <Border
         Width="350"
-        Height="300"
+        Height="400"
         CornerRadius="10"
         Background="#3993DD">
         <StackPanel Margin="20">
@@ -46,7 +46,44 @@
                     <StackPanel Grid.Column="1">
                         <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"/>
                         <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
-                        <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Cost, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox x:Name="CostTextBox" Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Cost, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
+                </Grid>
+            </Border>
+            <StackPanel Orientation="Horizontal"
+                        Margin="0 10 0 0">
+                <TextBlock Text="Сотрудник"
+                           Foreground="White"
+                           FontFamily="Inter"
+                           FontSize="16"
+                           Height="20"/>
+                <ComboBox Width="120" 
+                          Margin="10 0" 
+                          ItemsSource="{Binding Workers}"
+                          DisplayMemberPath="FIO"
+                          SelectedItem="{Binding SelectedWorker}"/>
+                <Button Content="найти"
+                        Style="{DynamicResource ButtonRoundStyle}"
+                        Background="White"
+                        Width="80"
+                        FontSize="14"
+                        FontWeight="Medium" Click="VisibillityWorker"/>
+            </StackPanel>
+            <Border CornerRadius="5" Background="White" Padding="5" Margin="0 5 0 0" Visibility="Collapsed" x:Name="WorkerBorder">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <Label Height="24" Content="Фамилия" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Имя" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Отчество" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding SecondName, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Patronymic, UpdateSourceTrigger=PropertyChanged}"/>
                     </StackPanel>
                 </Grid>
             </Border>
