- заменил полное удаление данных на их "затенение" - реализовал методы на странице с клиентами:      удаления     добавления     редактирования - доделал полностью всё, что касается клиентов

--- a/SolickManagerV3_4/Pages/ListClientAndDevicePage.xaml
+++ b/SolickManagerV3_4/Pages/ListClientAndDevicePage.xaml
@@ -322,7 +322,7 @@
                                         FontFamily="Inter/#Inter-V.ttf"
                                         Height="24"/>
                                 <ListView BorderThickness="0"
-                                         ItemsSource="{Binding SelectedClient.Clientsdevices}"
+                                         ItemsSource="{Binding Clientsdevices}"
                                          SelectedItem="{Binding SelectedDeviceInSelectedClient}"
                                          DisplayMemberPath="Model"
                                          FontSize="12"
